[package]
name = "beatlocker-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-recursion = "1"
atty = "0.2"
axum = { git = "https://github.com/tokio-rs/axum.git" }
axum-extra = { git = "https://github.com/tokio-rs/axum.git", features = ["async-read-body", "query"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
const_format = "0.2"
deadpool = "0.9"
distance = "0.4"
git-version = "0.3"
governor = "0.5"
heck = "0.4"
hex = "0.4"
http-cache-reqwest = { git = "https://github.com/sagacity/http-cache.git", branch = "bump-moka-version", default-features = false, features = ["manager-moka"] }
infer = "0.9"
itertools = "0.10"
lewton = "0.10"
md5 = "0.7"
once_cell = "1.15"
quick-xml = { version = "0.25", features = ["serialize"] }
reqwest = { version = "0.11.11", default-features = false, features = ["native-tls", "json", "stream", "multipart", "gzip", "brotli", "deflate"] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
siphasher = "0.3"
symphonia = { version = "0.5", features = ["aac", "mp3"] }
symphonia-metadata = "0.5"
sqlx = { version = "0.6", features = [ "chrono", "migrate", "runtime-tokio-rustls", "sqlite", "uuid" ] }
task-local-extensions = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.3", features = ["cors", "trace"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unidecode = "0.3"

[dev-dependencies]
bytes = "1.2"
hyper = "0.14.20"
id3 = "1.3"
insta = { version = "1.21", features = ["json"] }
tempdir = "0.3"
tower = "0.4.13"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "serde"
]
